--- a/GiftCards/src/main/resources/templates/home/home.html
+++ b/GiftCards/src/main/resources/templates/home/home.html
@@ -13,7 +13,7 @@
 					US</h3>
 
 				<p
-					style="font-size: 20px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 20px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">
 					<a>www.coolcoupons.in</a>. has been a focused local coupon
 					advertising platform. We believe by offering an incentive through a
@@ -23,7 +23,7 @@
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Business : A professionally done coolcoupons book
 					will boost your sales and attract many new customers. It is easy
 					for your customers to take advantage of your offers. There are also
@@ -32,7 +32,7 @@
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Many companies use coupons to attract customers to
 					shop at their store or use their services &#x2010; why not give
 					your customers entire coupon books! A good variety of offers can
@@ -41,7 +41,7 @@
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">These coolcoupons book are completely custom and
 					can be set up any way you wish. Choose any number of pages you
 					want. You can make each page an individual coupon or set up each
@@ -59,33 +59,33 @@
 		<div class="new-products" id="vm">
 			<div class="container">
 				<h3
-					style="font-size: 26px; color: #c51911; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 26px; color: #c51911; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Values &amp; Mission</h3>
 				<p
-					style="font-size: 20px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 20px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Trust : An honest approach in everything we do.</p>
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 20px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 20px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Caring : Going above and beyond for our customers.</p>
 
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 20px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 20px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Accountability : Taking ownership in our efforts.</p>
 
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 20px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 20px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Quality : Working harder to improve our products.</p>
 
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px;; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px;; font-family: sans-serif;"
 					align="left">Culture :Work hard, smart work, team work.</p>
 
 				<div>&nbsp;</div>
@@ -100,13 +100,13 @@
 				<h3 style="font-size: 26px; color: #c51911;" align="center">online
 					advertising</h3>
 				<p
-					style="font-size: 22px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 22px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">
 					Advertise on <a>coolcoupons.in</a>
 				</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Promote your business in local city, from as
 					little as Rs 350 + Gst per month, minimum booking 6
 					months.Reaching, thousands of online customers.Often with online
@@ -115,7 +115,7 @@
 					enables you to track return.</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">
 					<a>www.coolcoupons.in</a> has been a focused local coupon
 					advertising platform. We believe by offering an incentive through a
@@ -125,81 +125,81 @@
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 22px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 22px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Full Profile Page Includes:</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">About your business,</p>
 
-				<p style="font-size: 18px; color: #000; letter-spacing: -1px"
+				<p style="font-size: 18px; color: #000; letter-spacing: 0px"
 					align="left">Your Company Logo and Business Address Details,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Two images,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Mobile Number,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Email Address</p>
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 22px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 22px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Coupon Content Includes:</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Company Logo,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">One Image,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Your Address Details,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Coupon offer details,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Expiry date and terms and conditions,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Expiry date and terms and conditions,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Relevant business category (e.g. Restaurants),</p>
 				<div>&nbsp;</div>
 				<p
-					style="font-size: 22px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 22px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Every booking also includes:</p>
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Your business and your offers on our FREE Android,</p>
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Your offers featured in our email newsletters to
 					subscribers,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Pricing Summary:(Includes Full Business Profile
 					and 3 Voucher Offers)</p>
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">6 MONTH BOOKING : Rs 350+Gst per month,</p>
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">12 MONTH BOOKING : Rs 300+Gst per month.</p>
 				<div>&nbsp;</div>
 			</div>
@@ -211,52 +211,52 @@
 				<h3 style="font-size: 26px; color: #c51911;" align="center">coolcoupons
 					book advertising</h3>
 				<p
-					style="font-size: 22px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 22px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Promote your brand direct to local homes.</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Our coolcoupons Book, are packed with local
 					savings customers want. The coolcoupons book contains discounts,
 					special offers. Unique cheque-book sized publication.</p>
 
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Extremely cost effective.</p>
 
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Huge consumer appeal.</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Large distribution coverage.,</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">
 					Dedicated website at <a>coolcoupons.in.</a>
 				</p>
 				<div>&nbsp;</div>
 				<p
-					style="font-size: 22px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 22px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Coverage</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Our mass coverage distribution means that we
 					deliver to just under 3,000 homes.</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Advertise in our local city/town from as little as
 					Rs 3000+Gst per issue.</p>
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">
 					<a>coolcoupons.in</a> has quickly become a popular destination for
 					local savers to find and print their favourite coupons.
@@ -264,11 +264,11 @@
 				<div>&nbsp;</div>
 
 				<p
-					style="font-size: 22px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 22px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">your coupons</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">Included with your advert in the coupons book, you
 					will also have your offers promoted on our website. (If you are
 					unable to create your own artwork, this is not a problem
@@ -276,11 +276,11 @@
 					250+Gst).</p>
 				<div>&nbsp;</div>
 				<p
-					style="font-size: 22px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 22px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">COMPANY PROFILE</p>
 
 				<p
-					style="font-size: 18px; color: #000; letter-spacing: -1px; font-family: serif;"
+					style="font-size: 18px; color: #000; letter-spacing: 0px; font-family: sans-serif;"
 					align="left">In addition you will also have a full company
 					profile page on our website which includes business overview, logo,
 					photos, contact details.</p>
